--- a/resources/scss/_button.scss
+++ b/resources/scss/_button.scss
@@ -280,26 +280,20 @@ color: $white !important;
 
   @media (min-width: 768px) {
     /* สำหรับหน้าจอขนาดใหญ่ (md) ขึ้นไป */
-    width: 268px;
-    font-size: 24px;
-    margin-top: 30px;
-
-    height: 60px;
+    width: 130px;
+    font-size: 16px;
+    height: 30px;
   }
 
   @media (min-width: 1024px) {
     /* สำหรับหน้าจอขนาดใหญ่มาก (lg) ขึ้นไป */
     width: 268px;
     font-size: 24px;
-    margin-top: 30px;
-
     height: 60px;
   }
   @media (min-width: 1280px){
     width: 268px;
     font-size: 24px;
-    margin-top: 0px;
-
     height: 60px;
   }
 
@@ -313,4 +307,27 @@ color: $white !important;
   font-size: 16px;
   box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.20) inset, 0px 4px 50px 0px rgba(255, 215, 0, 0.40);
   border-radius: 38px;
+  @media (min-width: 425px) {
+    /* สำหรับหน้าจอขนาดกลาง (sm) ขึ้นไป */
+    width: 150px;
+    height: 25px;
+    background-color: $black; /* พื้นหลังสีดำ */
+    border: 1px solid  #FFD700;
+    color: #CAD1E9; /* สีตัวอักษรเป็นสีเหลือง */
+    font-size: 16px;
+    box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.20) inset, 0px 4px 50px 0px rgba(255, 215, 0, 0.40);
+    border-radius: 38px;
+
+  }
+  @media (min-width: 768px) {
+    width: 160px;
+    height: 30px;
+    background-color: $black; /* พื้นหลังสีดำ */
+    border: 1px solid  #FFD700;
+    color: #CAD1E9; /* สีตัวอักษรเป็นสีเหลือง */
+    font-size: 16px;
+    box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.20) inset, 0px 4px 50px 0px rgba(255, 215, 0, 0.40);
+    border-radius: 38px;
+
+  }
 }
